<resources>
    <string name="app_name">FinalYearProject1Try</string>
    <string name="title_activity_smartphone__brands_activity">Smartphone_Brands_activity</string>
    <string name="title_activity_dash_board">DashBoardActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_aa">AAA</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_phone">Phone</string>
    <string name="title_laptop">Laptop</string>
    <string name="title_desktop">Desktop</string>
    <string name="title_tv">TV</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="laptop_processor_guide_intro">

        CPU:

        The Most important things to consider before buying a laptop is to know about its processor. It has a huge influence on the performance of any laptop.

    </string>
    <string name="laptop_processor_core_i5">

        Intel-core i5: \n\n

        If you are looking for a complete laptop with best combination of price and performance, get one with an intel core i5 CPU. The most common those are ends with ‘U’ like Core i5-7200U. Those are low powered and have the worst performance while the best ones are ‘HQ’ named processor and they have very good performance and mostly used in gaming and workstation systems. Intel’s new 8th gen, ‘Kaby Lake’ CPUs have model number that is like Core i5-8250. They have more amount of cored that improves overall performance boost.


    </string>
    <string name="laptop_processor_core_i7">

        Intel-core i7: \n\n

        A step up from Core i5, which Models with numbers that end in HQ or K use higher wattage and have four cores, allowing for even faster gaming and productivity. There are also Core i7 Y series chips that have lower power and performance. Keep an eye out for CPUs that have an 8 in the model number (ex: Core i7-8250U) because they are part of Intel\s latest, 8th Generation Core Series, and offer better performance. However, 8th Gen processors are only available in the U series right now.


    </string>
    <string name="laptop_processor_core_i3">

        Intel-core i3: \n\n

        Performance is not good that you can do most of the work fine like gaming and editing are possible here. But if you are doing normal stuff like watching YouTube, browsing internet, playing casual games, word document work etc. Don’t expect goof performance with core i3 specially in laptop as they have low cores and thread.



    </string>
    <string name="laptop_processor_ryzen_mobile">

        AMD Ryzen Mobile: \n\n

       A new set of chips designed by AMD to compete with intel’s core i3, i5, i7 processors. AMD Ryzen CPUs are really great price to performance as its cheap and provide nearly equal quality as intel processors. They have more cores and more threads than intel’s one and for that they are good in productivity but not in games like you can stream videos, edit them, do multi-tasking faster than intel’s equivalent at less cost. But gamin is not great on them.


    </string>
    <string name="laptop_processor_pentium_celeron_mobile">

        Pentium/Celeron: \n\n

        Common in sub $400 laptops, these chips offer the slowest performance, but can do if your main tasks are web surfing and light document editing. If you can pay more to get a Core i3 or i5, you\'d be better off.

    </string>
    <string name="laptop_processor_intel_xeon_mobile">

       Intel Xeon: \n\n
Extremely powerful and expensive processors for large mobile workstations. If you do professional-grade engineering, 3D modeling or video editing, you might want a Xeon, but you won\'t get good battery life or a light laptop.


    </string>
    <string name="smartphone_ram_intro">

        What is ram?\n\n
Ram (Random Access Memory).It is called random access memory because it can be read and written at any point without needing to wait in the queue of process is the ultimate part of any compute capable machine that helps to load and execute task and specially, when you use a tons of apps in smartphone you get to know that how important it is for loading your apps. So, the knowledge about Ram is so much important when buying your smartphone.\n\n

    </string>
    <string name="smartphone_ram_why_important">

        Why is ram so important?\n\n
Ram is the to help processor load and execute task and for doing multiple task you need ram if you ran out of ram your smartphone will lag a lot you will find it not so smooth rather your task will hang a lot when you have less amount ram on your device.\n\n



    </string>
    <string name="smartphone_ram_why_need_more_ram">

        Why we need more ram?\n\n

As the Modern world the technology is increasing and our daily necessary also getting more demanding like playing very high quality games, Shooting 4k videos, 4G, 5G, WIFI internet browsing, using multiple apps same time etc. need a lot of processing power and ram to access then and load them properly. So, day by day the importance of implementing more ram on smartphone is so vital.\n\n



    </string>
    <string name="smartphone_ram_how_much_enough">

        How much ram is enough?\n\n
It depends upon your need and use and OS (Operating System) as If you use android OS then you need more ram than IOS based Iphones as the platform and optimization are factors too when thinking about how much ram is proper. So, Android users need at least 3GB of ram to do daily task properly like games, shooting videos, watching 4k content, internet using with multiple tabs and for multitasking. But do not expect butter smooth performance in 3GB of ram now-a-days as its for average users and budget smartphone users. But if you want better performance than go for 4gb variant of that smartphone or if you have higher budget use 6gb of ram that is quite enough for any android phone at my writing time of January 2019 but this may change in future.\n\n
        Here we also have 8GB variant of Samsung Note 9, OnePlus 6 and 6T with 8GB of ram etc. But they are expensive if you go for 8 GB one so for most of budget people 3 GB or 4GB is quite good and for higher end users and more smooth performance and intensive multitasking use 6GB one.


    </string>
    <string name="smartphone_ram_optimization_android_vs_ios">

        Ram Optimization Differences:\n\n

        Ram behaves little differently in accordance with your OS and optimization. As in the previous section I told you guys that in android OS we need more ram but now let see why on IOS we do not need that much of ram on iphones, ipads etc. IOS has much better optimization than android so it does not require that much ram to operate smoothly. It can do all tasks and daily needs so smoothly in 2GB ram only that even 4GB ram android phones cannot give you. Like now Iphones are also using 4gb ram that compete with android 6GB and 8GB ram. IphoneX and Iphone Xs max do not have 8 GB of ram but it defeats all other 8GB android phones for its good apps and OS optimization. \n\n


    </string>
    <string name="smartphone_ram_types">

        There are different types of ram modules:\n\n
        1. LPDDR3
        2. LPDDR4
        3. LPDDR4X


    </string>
    <string name="smartphone_ram_lpddrs">

        LPDDRs:\n\n
The LPDDR or Low Power DDR is also known as Mobile DDR or m-DDR. These are specially designed Double data rate Synchronous DRAM for the mobile smartphones and Tablet PCs. The essence of LPDDRs lies in the fact that they are design to consume low power at around 1.8 volts as compared to the 2.5 volts RAMs used in other devices.


    </string>
    <string name="smartphone_ram_lpddr4">

        The LPDDR4, as should be evident, is the fourth generation of LPDDR RAM technology. In essence, it can be considered to be the DDR4 alternative for the mobile devices. While DDR4 has already been used in high-end PCs and similar systems, their mobile equivalent the LPDDR4 finds a vital use in smartphones and tablets.\n\n
        The LPDDR4 brings ahead faster functionality and lower power consumption. The fundamental difference between then DDR4 RAM used in PCS and the LPDDR4 lies in the fact that they come with smaller bit bus. This helps in lower power consumption.\n\n
        The LPDDR4 improves the data rates by almost double when compared to the previous generations, the LPDDR3. You can get data rates as high as 3200Mb per sec with LPDDR4 as compared to the 1600 Mb per sec performance on the LPDDR3. The LPDDR3 had one channel, while the LPDDR4 opts for a two-channel design. It offers you 16 Bits per channel, thus providing you a total of 32 Bits. This can be helpful in lowering the power requirements of the core. The short data path ensures that the lower power consumption. This can be quite helpful in improving the operational speed and performance. The LPDDR4 offers a marginal improvement in the power consumption from 1.2 volts on LPDDR3 to 1.1 Volts on LPDDR4.\n\n


    </string>
    <string name="smartphone_ram_lpddr4x">

        LPDDR4X:\n\n


LPDDR4X is another fourth-generation Low Power DDR RAM developed for the mobile computing devices. In fact, there is not much of a difference between the LPDDR4 and LPDDR4X as such.\n\n

In fact, the LPDDR4X has been planned as a small optional upgrade to the LPDDR4 modules. The only difference between the LPDDR4 and LPDDR4X lies in the lower power consumption – still lower than that on the former. As we have already found above, the power consumption levels on LPDDR4 have been reduced marginally from the LPDDR3. This is further reduced with LPDDR4X.\n\n

        In essence, the LPDDR4X reduces the output driver power to achieve this. You will be able to reach around a 20 percent reduction in the power consumption for the memory system.\n\n


    </string>
    <string name="smartphone_ram_verdict">

        Final Verdict:\n\n

Well, the significant difference between the LPDDR4 and LPDDR4X lies in the fact that the latter reduces the power consumption requirements by almost 55 percent, bringing it down to 0.6 Volts. Of course, there are a few minor differentiations apart from that, but in most aspects, the two siblings remain almost identical and offer similar functionalities. Moreover, these RAM modules can be manufactured on smaller systems and thus help you in reducing the associated costs. We expect the LPDDR4X to be available on almost all future generations of processors.


    </string>
</resources>