<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#673AB7"
    tools:context=".SmartphoneTechRamActivity">

    <LinearLayout
        android:background="@drawable/main_card_bg"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <android.support.v7.widget.CardView

            android:layout_margin="2dp"
            android:padding="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            android:elevation="6dp"
            app:cardElevation="8dp"
            android:layout_gravity="center">

            <LinearLayout
                android:layout_margin="2dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textIsSelectable="true"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:textSize="23sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:textAlignment="center"
                    android:text="Smartphone Ram Guide"/>



                <android.support.v7.widget.CardView
                    android:layout_margin="2dp"
                    android:elevation="4dp"
                    app:cardElevation="6dp"
                    app:cardCornerRadius="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="200dp">

                    <LinearLayout
                        android:layout_margin="5dp"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:layout_margin="5dp"
                            android:layout_gravity="center"
                            android:src="@drawable/smartphone_ram_intro"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </LinearLayout>



                </android.support.v7.widget.CardView>



                <TextView
                    android:textIsSelectable="true"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:padding="3dp"
                    android:textStyle="normal"
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:textAlignment="textStart"
                    android:text="@string/smartphone_ram_intro"/>









                <android.support.v7.widget.CardView
                    android:layout_margin="2dp"
                    android:elevation="4dp"
                    app:cardElevation="6dp"
                    app:cardCornerRadius="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="200dp">

                    <LinearLayout
                        android:layout_margin="5dp"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:layout_margin="2dp"
                            android:layout_gravity="center"
                            android:src="@drawable/smartphone_ram_why_important"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </LinearLayout>



                </android.support.v7.widget.CardView>



                <TextView
                    android:textIsSelectable="true"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:padding="3dp"
                    android:textStyle="normal"
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:textAlignment="textStart"
                    android:text="@string/smartphone_ram_why_important"/>
















                <android.support.v7.widget.CardView
                    android:layout_margin="2dp"
                    android:elevation="4dp"
                    app:cardElevation="6dp"
                    app:cardCornerRadius="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="200dp">

                    <LinearLayout
                        android:layout_margin="5dp"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:layout_margin="2dp"
                            android:layout_gravity="center"
                            android:src="@drawable/smartphone_ram_why_need_more_ram"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </LinearLayout>



                </android.support.v7.widget.CardView>



                <TextView
                    android:textIsSelectable="true"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:padding="3dp"
                    android:textStyle="normal"
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:textAlignment="textStart"
                    android:text="@string/smartphone_ram_why_need_more_ram"/>












                <android.support.v7.widget.CardView
                    android:layout_margin="2dp"
                    android:elevation="4dp"
                    app:cardElevation="6dp"
                    app:cardCornerRadius="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="200dp">

                    <LinearLayout
                        android:layout_margin="5dp"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:layout_margin="2dp"
                            android:layout_gravity="center"
                            android:src="@drawable/smartphone_ram_how_much_need"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </LinearLayout>



                </android.support.v7.widget.CardView>



                <TextView
                    android:textIsSelectable="true"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:padding="3dp"
                    android:textStyle="normal"
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:textAlignment="textStart"
                    android:text="@string/smartphone_ram_how_much_enough"/>




                <android.support.v7.widget.CardView
                    android:layout_margin="2dp"
                    android:elevation="4dp"
                    app:cardElevation="6dp"
                    app:cardCornerRadius="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="200dp">

                    <LinearLayout
                        android:layout_margin="5dp"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:layout_margin="2dp"
                            android:layout_gravity="center"
                            android:src="@drawable/smartphone_ram_android_vs_ios"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </LinearLayout>



                </android.support.v7.widget.CardView>



                <TextView
                    android:textIsSelectable="true"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:padding="3dp"
                    android:textStyle="normal"
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:textAlignment="textStart"
                    android:text="@string/smartphone_ram_optimization_android_vs_ios"/>







                <android.support.v7.widget.CardView
                    android:layout_margin="2dp"
                    android:elevation="4dp"
                    app:cardElevation="6dp"
                    app:cardCornerRadius="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="200dp">

                    <LinearLayout
                        android:layout_margin="5dp"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:layout_margin="2dp"
                            android:layout_gravity="center"
                            android:src="@drawable/smartphone_ram_types"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </LinearLayout>



                </android.support.v7.widget.CardView>



                <TextView
                    android:textIsSelectable="true"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:padding="3dp"
                    android:textStyle="normal"
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:textAlignment="textStart"
                    android:text="@string/smartphone_ram_types"/>






                <android.support.v7.widget.CardView
                    android:layout_margin="2dp"
                    android:elevation="4dp"
                    app:cardElevation="6dp"
                    app:cardCornerRadius="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="200dp">

                    <LinearLayout
                        android:layout_margin="5dp"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:layout_margin="2dp"
                            android:layout_gravity="center"
                            android:src="@drawable/smartphone_ram_lpddrs"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </LinearLayout>



                </android.support.v7.widget.CardView>



                <TextView
                    android:textIsSelectable="true"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:padding="3dp"
                    android:textStyle="normal"
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:textAlignment="textStart"
                    android:text="@string/smartphone_ram_lpddrs"/>




                <android.support.v7.widget.CardView
                    android:layout_margin="2dp"
                    android:elevation="4dp"
                    app:cardElevation="6dp"
                    app:cardCornerRadius="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="200dp">

                    <LinearLayout
                        android:layout_margin="5dp"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:layout_margin="2dp"
                            android:layout_gravity="center"
                            android:src="@drawable/smartphone_ram_lpddr4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </LinearLayout>



                </android.support.v7.widget.CardView>



                <TextView
                    android:textIsSelectable="true"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:padding="3dp"
                    android:textStyle="normal"
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:textAlignment="textStart"
                    android:text="@string/smartphone_ram_lpddr4"/>




                <android.support.v7.widget.CardView
                    android:layout_margin="2dp"
                    android:elevation="4dp"
                    app:cardElevation="6dp"
                    app:cardCornerRadius="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="200dp">

                    <LinearLayout
                        android:layout_margin="5dp"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:layout_margin="2dp"
                            android:layout_gravity="center"
                            android:src="@drawable/smartphone_ram_lpddr4x"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </LinearLayout>



                </android.support.v7.widget.CardView>



                <TextView
                    android:textIsSelectable="true"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:padding="3dp"
                    android:textStyle="normal"
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:textAlignment="textStart"
                    android:text="@string/smartphone_ram_lpddr4x"/>






                <android.support.v7.widget.CardView
                    android:layout_margin="2dp"
                    android:elevation="4dp"
                    app:cardElevation="6dp"
                    app:cardCornerRadius="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="200dp">

                    <LinearLayout
                        android:layout_margin="5dp"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:layout_margin="2dp"
                            android:layout_gravity="center"
                            android:src="@drawable/smartphone_ram_verdict"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </LinearLayout>



                </android.support.v7.widget.CardView>



                <TextView
                    android:textIsSelectable="true"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:padding="3dp"
                    android:textStyle="normal"
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:textAlignment="textStart"
                    android:text="@string/smartphone_ram_verdict"/>




            </LinearLayout>




        </android.support.v7.widget.CardView>

    </LinearLayout>


</ScrollView>